@@ -4,6 +4,7 @@
 Broker:
 - Add local_username, local_password for bridge connections to authenticate to
   the local broker.
+- Default TLS mode now accepts TLS v1.2, v1.1 and v1.0.
 
 1.3.1 - 20140324
 ================
